--- a/mirrors2016full-2016-09-26/css/style.css
+++ b/mirrors2016full-2016-09-26/css/style.css
@@ -10,7 +10,7 @@ html, body {
 
 
 body {
-	background-color: #e50c7f;
+	background-color: #E91B8A;
 }
 
 header {
@@ -18,7 +18,7 @@ header {
 	top: 0;
 	width: 100%;
 	height: 4em;
-	background-color: #e50c7f;
+	background-color: #E91B8A;
 }
 
 header div {
@@ -263,7 +263,7 @@ svg {
 
 .menu {
   display: block;
-  background-color: #e50c7f;
+  background-color: #E91B8A;
   width: 100%;
   height: 0px;
   -webkit-transition-duration: 0.2s;
@@ -345,6 +345,10 @@ svg {
 }
 .menuicon span::after {
   margin-top: 8px;
+}
+
+.about a {
+	text-decoration: none;
 }
 
 #hamburger:checked ~ .menu {
@@ -506,6 +510,11 @@ svg {
 	footer img {
 		height: 1em;
 		width: auto;
+	}
+
+	.lineup, .about {
+	width: 20em;
+
 	}
 
 }
