--- a/mirrors2016full-2016-10-24/css/style.css
+++ b/mirrors2016full-2016-10-24/css/style.css
@@ -185,12 +185,14 @@ svg {
 	margin-top: 8em;
 }
 
+
+
 .tickets svg {
 	fill: #fff;
-	width: 15em;
+	width: 10em;
 	height: auto;
 	transition: .5s;
-	margin: 6em auto 0;
+	margin: 1em 2em 0;
 	text-align: center;
 	transition: .5s;
 }
@@ -198,6 +200,14 @@ svg {
 .tickets svg:hover {
 	fill: #4fb75a;
 	transition: .5s;
+}
+
+.first-line {
+	margin: 4em;
+}
+
+.second-line {
+	margin: 0 0 6em; 
 }
 
 .lineup, .about {
@@ -234,6 +244,16 @@ svg {
 	margin: 8em auto 4em;
 }
 
+.map {
+	width: 40em;
+	margin: 2em auto 4em;
+}
+
+.map-header {
+	letter-spacing: .1em;
+	line-height: 1.25em;
+}
+
 .bottomh1 {
 	margin-bottom: 3em;
 }
@@ -246,6 +266,9 @@ svg {
   height: 4em; 
 }
 
+.margin-top {
+	margin-top: 5em;
+}
 
 #poster {
 	width: 100%;
@@ -352,7 +375,7 @@ svg {
 }
 
 #hamburger:checked ~ .menu {
-  height: 9em;
+  height: 11em;
   z-index: -1;
 }
 
@@ -415,7 +438,7 @@ svg {
 }
 
 @media screen and (max-width: 750px) {
-	.poster {
+	.poster, .map {
 		width: 30em;
 	}
 
@@ -425,10 +448,14 @@ svg {
 
 	.tickets svg {
 		display: block;
-		height: 15em;
+		height: 10em;
 		width: auto;
-		margin: 0 auto;
+		margin: 1em auto;
 	}
+
+	.second-line svg {
+    width: 15em;
+}
 }
 
 @media screen and (max-width: 700px) {
@@ -456,7 +483,7 @@ svg {
 		height: 2em;
 	}
 
-	.poster {
+	.poster, .map {
 		width: 25em;
 	}
 }
@@ -484,7 +511,7 @@ svg {
 		width: auto;
 	}
 
-	.poster {
+	.poster, .map {
 		width: 20em;
 	}
 
