--- a/girlsandboys/css/style.css
+++ b/girlsandboys/css/style.css
@@ -1,70 +1,138 @@
-@import url(https://fonts.googleapis.com/css?family=Inconsolata);
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-* {
-	padding: 0px;
-	margin: 0px;
-	box-sizing:border-box;
+html, body {
+	background: url(../images/rooftop.png)
+	fixed left center no-repeat;
+	background-size: cover;
+	background-color: #151515;
+	width: 100%;
+	height: 100vh;
+	-webkit-font-smoothing: antialiased;
+	color: #fff;
+	font-size: 20px;
+	font-family: 'Open Sans', sans-serif;
+	text-rendering: optimizeLegibility;
 }
 
-body {
-	font-size: 16px;
-	/*1em = 16px*/
+header {
+	position:fixed;
+	top:0px;
+	left:0px;
+	width:100%;
+	height: 3.5em;
+	color:#fff;
+	padding: 1.2em;
+	z-index: 10;
+	background: inherit;
 }
 
 nav {
 	float: right;
+	color: white;
+	text-transform: uppercase;
+	letter-spacing: .1em;
 }
-
 
 a {
 	text-decoration: none;
+	cursor: pointer;
 }
 
-nav a {
-	float: left;
+
+form {
+	text-align: center;
 }
-input, form, {
-		border-radius: 0;
-		margin: .5em auto;
-		-webkit-appearance: none;
-		display: inline-block;
+
+footer {
+	position: fixed;
+	bottom: 0;
+	left:0px;
+	width:100%;
+	color:#fff;
+	margin: 1em;
+	height: 3.5em;
+	z-index: 10;
+	background: inherit;
+	text-align: center;
 }
+
+
+form.validate {
+	margin: 10em 0 0;
+}
+
 
 input:focus {
-  	outline-color: transparent;
-  	outline-style: none;
- }
-
-
-footer h2 {
-	color: #fff;
-	font-family: Inconsolata, sans-serif;
-	margin: auto;
-	display: inline;	
+	outline: none;
+	color: white;
 }
 
-a.crossrotate.underslide {
-    margin-top: 1.2em;
-    font-size: .75em;
+::-webkit-input-placeholder {
+	font-family: 'Open Sans', sans-serif;
+   	color: rgba(255, 255, 255, .5);
+   	font-size: 1.2em;
+   	line-height: 1.2em;
+
 }
 
-form#mc-embedded-subscribe-form {
-    margin-top: .8em;
+:-moz-placeholder { /* Firefox 18- */
+	font-family: 'Open Sans', sans-serif;
+   	color:  rgba(255, 255, 255, .5); 
+   	font-size: 1.2em;
+   	line-height: 1.2em;
 }
+
+::-moz-placeholder {  /* Firefox 19+ */
+	font-family: 'Open Sans', sans-serif;
+   	color:  rgba(255, 255, 255, .5);
+   	font-size: 1.2em; 
+   	line-height: 1.2em;
+}
+
+:-ms-input-placeholder {  
+	font-family: 'Open Sans', sans-serif;
+   	color: rgba(255, 255, 255, .5);  
+   	font-size: 1.2em;
+   	line-height: 1.2em;
+}
+
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px white inset;
+}
+
 .mainnav {
 	color: #fff;
-	font-size: 1.5em;
-	font-style: none;
-	font-family: Inconsolata, sans-serif;
+	font-size: 1.1em;
+	font-weight: 100;
+	font-family: 'Open Sans', sans-serif;
 	text-decoration: none;
-	margin: .5em 1em 0 2em;
-	white-space: nowrap;
+	margin: 1em 1em 0 1.5em;
 }
 
-.horizontal {
-	display: inline-block;
+
+.clearfix:after {
+   content: " ";
+   visibility: hidden;
+   display: block;
+   height: 0;
+   clear: both;
 }
 
+
+
+.threecolumn {
+	width: 33.33%;
+	float: left;
+	text-align: center;
+	padding: 1em 0 .2em;
+}
+
+.socialsvg {
+	fill: #fff;
+	height: 1.7em;
+	width: 1.7em;
+	margin: 1em .5em 0;
+}
 
 .underslide {
 	display: inline-block;
@@ -84,102 +152,280 @@ form#mc-embedded-subscribe-form {
 	background: white;
 }
 
-.socialsvg {
-	fill: #fff;
+.overlay {
+	width: 100%;
+	min-height: 100%;
+	background-color: rgba(0,0,0,0.4);
+	margin: 2em 0; 
+
+}
+
+.overlay h2 {
+	font-family: 'open sans', sans-serif;
+	font-size: 1.3em;
+	font-weight: 600;
+}
+
+.content {
+    width: 80%;
+    margin: 0 auto;
+    padding: 4em 0;
+    z-index: 5;
+    overflow: auto;
+}
+
+.content-center {
+	width: 50em;
 	margin: 0 auto;
-	height: 2em;
-	width: 2em;
-	margin: 0 .5em;
-/*	box-shadow: 1px 1px 1px 1px black;*/
+	padding: 13em 0;
+	z-index: 5;
+	overflow: auto;
 }
 
-.threecolumn {
-	width: 33.33%;
-	float: left;
-	text-align: center;
-
-}
-
-.footsider {
-	margin-top: 2em;
-}
-
-.plus {
-	fill: #fff;
-	height: .6em;
-	width: .6em;
+.content-center p {
+	margin: .5em 0 1em;
+	font-family: 'open sans', sans-serif;
 	font-size: 1.2em;
-	margin-left: .5em;
-	transform: rotate(-45deg);
-
+	font-weight: 100;
+	letter-spacing: .1em;
+	line-height: 1.2em;
 }
 
-.cross {
-	fill: #000;
-	height: .7em;
-	width: .7em;
-	margin-left: .5em;
+.content-center a {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1.2em;
+	font-weight: 600;
+	line-height: 1.2em;
+	color: #fff;
+	text-decoration: none;
 }
 
+.centered {
+	margin: auto;
+}
 
-/*.center {
-	margin: 0 auto;
+.upcoming-events {
+	padding: 6em 0 2em;
 	text-align: center;
-}*/
-
-#stillbg { 
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-    background: url(../images/stillbg.jpg) no-repeat;
-    background-size: cover; 
+	height: auto;
 }
 
-#splash {
-	height: 95vh;
-	background: rgba(34, 34, 34, .1);
+.upcoming-events h2 {
+	text-align: center;
+	margin: 0 0 2em;
+	letter-spacing: .1em;
 }
 
-#mc_embed_signup {
-	display: inline;
-	background:#fff; 
-	clear:left; 
-	width:100%;
+.upcoming-events img {
+	width: 30%;
+	height: auto;
+	margin: 0 1em 1em;
+}
+
+.previous-events {
+	text-align: center;
+	height: auto;
+	padding: 0 0 4em;
+}
+
+.previous-events h2 {
+	text-align: center;
+	margin: 0 0 2em;
+	letter-spacing: .1em;
+}
+
+.previous-events img {
+	width: 16%;
+	height: auto;
+	margin: 1em 1em;
+}
+
+.hidden { 
+	display: none; 
 }
 
 
+.hamburger{
+  background:none;
+  position:absolute;
+  top:0;
+  right:0;
+  padding:0px 15px 0px 15px;
+  color:#fff;
+  border:0;
+  font-size:1.4em;
+  cursor:pointer;
+  outline:none;
+  z-index:10000000000000;
+}
+.cross{
+  background:none;
+  position:absolute;
+  top:0px;
+  right:0;
+  padding: 0px 15px 0px 15px;
+  color:#fff;
+  border:0;
+  font-size:4em;
+  cursor:pointer;
+  outline:none;
+  z-index:10000000000000;
+}
+.overlay-close{
+  background:none;
+  position: fixed;
+  top: 1em;
+  right:0;
+  padding: 0px 15px 0px 15px;
+  color:#fff;
+  border:0;
+  font-size:4em;
+  cursor:pointer;
+  outline:none;
+  z-index:10000000000000;
+}
+.menu{
+	z-index:1000000;  
+	width:100%; 
+	position:absolute; 
+	text-align:center;
+	font-family: 'open sans', sans-serif;
+}
 
-#mce-EMAIL {
-	font-family: Inconsolata, sans-serif;
-	margin: 0 2em;
+.menu ul {margin: 0; padding: 0; list-style-type: none; list-style-image: none;}
+.menu li {display: block;   padding:15px 0 15px 0; }
+.menu li:hover{display: block;    background:#181818; padding:15px 0 15px 0; }
+.menu ul li a { text-decoration:none;  margin: 0px; color:#fff;}
+.menu ul li a:hover {  color: #fff; text-decoration:none;}
+.menu a{text-decoration:none; color:white;}
+.menu a:hover{text-decoration:none; color:white;}
+
+.glyphicon-home{
+  color:white; 
+  font-size:1.5em; 
+  margin-top:5px; 
+  margin:0 auto;
+}
+
+.mobile-nav {
+	font-size: 1.1em;
+	font-weight: 100;
+	text-decoration: none;
+	letter-spacing: .1em;
+	display: none;
+}
+
+
+.mailchimp-input {
+	background: transparent;
+	border: none;
+	border-bottom: 2px solid rgba(255, 255, 255, 1);
+	font-size: 1.2em;
+	color: #fff;
+	padding: 2px;
+	width: 20em;
+	display: block;
+	margin: 1em auto;
 }
 
 #submit {
-	font-family: Inconsolata, sans-serif;
-	background-color: transparent;
+	background: none;
 	border: none;
 	color: #fff;
-	font-weight: 200;
-	text-decoration:none;
-	text-shadow: none;
-	-webkit-transition: .25s;color;
-	-moz-transition: .25s;color;
-	-o-transition: .25s;color;
-	transition: .25s;color;
-	cursor: pointer;
-	border-radius: 3px;
+	font-size: 1.3em;
+	font-weight: 600;
+	padding-bottom: .15em;
+	width: auto;
+	margin: 1.5em auto 0;
 }
 
-#player {
-	display: none;
-	position: static;
+@media screen and (max-width: 1100px) {
+		.upcoming-events img {
+		width: 35%;
 }
+
+.previous-events img {
+	width: 20%;
+
+}
+}
+
+@media screen and (max-width: 900px) {
+	.content-center {
+	width: 80%;
+
+}
+
+	.upcoming-events img {
+		width: 40%;
+}
+
+.previous-events img {
+	width: 28%;
+}
+
+}
+
+@media screen and (max-width: 750px) {
+		.upcoming-events img {
+		width: 50%;
+}
+
+.previous-events img {
+	width: 30%;
+	height: auto;
+	margin: 1em 1em;
+}
+
+}
+
+
+@media screen and (max-width: 600px) {
+		.mainnav {
+		display: none;
+	}
+	.mobile-nav {
+		display: block;
+	}
+	.overlay-close {
+		display: none;
+	}
+
+	.content-center {
+	padding: 10em 0;
+}
+	.upcoming-events img {
+		width: 60%;
+}
+}
+
+@media screen and (max-width: 570px) {
+	.threecolumn {
+		width: 25%;
+		text-align: center;
+	}	
+	.center {
+		width: 50%;
+	}
+}
+
+@media screen and (max-width: 480px) {
+	html, body {
+		font-size: 18px;
+	}
+
+	.mailchimp-input {
+	width: 15em;
+}
+
+	.socialsvg {
+	height: 1.5em;
+	width: 1.5em;
+	margin: 1em 0.25em 0;
+}
+	.upcoming-events img {
+		width: 70%;
+
+}
+}
+
