--- a/Ordeo/css/style.css
+++ b/Ordeo/css/style.css
@@ -10,6 +10,7 @@ div#business-card {
 h1 {
   font-family: 'Lato', sans-serif;
   font-weight: 300;
+  font-size: 3.3em;
   letter-spacing: .1em;
   margin-bottom: 0em;
 }
@@ -18,12 +19,17 @@ p {
   font-family: 'Open Sans', sans-serif;
 }
 
+.container {
+  width: 60%;
+  margin: 10% auto 0;
+}
 
 
 #business-card {
   background-color: #323232;
   color: #fff;
   text-align: center;
+  margin-top: 10%!important;
 }
 
 #business-card a {
@@ -56,29 +62,47 @@ p {
   letter-spacing: .2em;
 }
 
+@media screen and (max-width: 1000px) {
+  .container {
+    width: 70%;
+  }
+}
+
 @media screen and (max-width: 950px) {
   div #business-card {
-    margin-top: 25%!important;
+    margin-top: 15%!important;
+  }
+    .container {
+    width: 75%;
   }
 }
 
 @media screen and (max-width: 769px) {
   div#business-card {
-    padding: 4em;
-    margin-top: 30%!important;
+    padding: 7em 4em;
+    margin-top: 22%!important;
 }
+    .container {
+    width: 80%;
+  }
 }
 
 @media screen and (max-width: 600px) {
   div#business-card {
-    padding: 2em;
+    padding: 7em 2em;
 }
+    .container {
+    width: 90%;
+  }
 }
 
 
 @media screen and (max-width: 550px) {
   div #business-card {
-    margin-top: 50%!important;
+    margin-top: 30%!important;
+  }
+    .container {
+    width: 100%;
   }
 }
 
