--- a/seanmahoney/css/custom.css
+++ b/seanmahoney/css/custom.css
@@ -20,30 +20,102 @@ section {
 	margin-top: 10rem;
 }
 
+h4 {
+	font-size: 2.8rem;
+}
+
+h5 {
+	font-size: 2.2rem
+}
+
+h6 {
+	font-weight: 800;
+	margin-bottom: 1rem;
+}
+
+p {
+	text-align: justify;
+}
+
+
+.fixed {
+	position: fixed;
+	top: 0;
+	left: 0;
+	background: #fff;
+	width: 100%;
+}
+
+.fixed .nav-inner {
+	max-width: 700px;
+	margin: 0 auto;
+}
 
 .navbar {
-	margin-top: 20rem;
 	display: block;
 	width: 100%;
 	height: 6.5rem;
 	z-index: -99;
 	border-top: 1px solid #eee;
 	border-bottom: 1px solid #eee;
+	z-index: 100;
+}
+
+.navlink {
+	text-decoration: none;
+	color: #222; 
 }
 
 .maintitle {
-	margin-top: 25%;
+	margin-top: 28%;
 	text-align: center;
 	letter-spacing: .1rem;
+	font-weight: 600;
 }
 
 .subtitle {
 	font-size: 18px;
 	text-align: center;
 	letter-spacing: .1rem;
+	margin-bottom: 23rem;
 }
 
-.aboutme {
-
+.work	{
+	text-align: center;
 }
+
+.workrow {
+	text-align: center;
+	max-width: 640px;
+	margin: 0 auto 5rem;
+	text-align: justify;
+	border-bottom: 1px solid #bbb;
+}
+
+.workrow iframe {
+	max-width: 100%;
+	height: 100!important;
+}
+
+.workrow h5,h6 {
+	text-align: justify;
+}
+
+.centertext {
+	text-align: center;
+}
+
+.profilepic {
+	margin-bottom: 2rem;
+	height: 25rem;
+	width: auto;
+	border-radius: 120px;
+}
+
+.socialsvg {
+	height: 20rem;
+	width: 20rem;
+}
+
+
 
