--- a/seanmahoney/css/custom2.css
+++ b/seanmahoney/css/custom2.css
@@ -17,7 +17,7 @@ nav li {
 }
 
 section {
-	margin-top: 10rem;
+	margin-top: 15rem;
 }
 
 h4 {
@@ -39,6 +39,14 @@ p {
 
 
 .fixed {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	background: #fff;
+	width: 100%;
+}
+
+.fixedtop {
 	position: fixed;
 	top: 0;
 	left: 0;
