--- a/seanmahoney/css/custom2.css
+++ b/seanmahoney/css/custom2.css
@@ -6,6 +6,7 @@ body {
 	margin: 0;
 }
 
+
 nav ul {
 	margin: 0 auto;
 	text-align: center;
@@ -45,11 +46,14 @@ p {
 	text-align: justify;
 	font-family: 'Merriweather', serif;
 	font-weight: 300;
-	letter-spacing: .05rem;
 }
 
 .index {
-	background: #638D9E;
+	background: url(../images/bg2_1800.jpg) fixed left center no-repeat;
+    background-size: cover;
+    background-color: #151515;
+    width: 100%;
+    height: 100vh;
 }
 
 
@@ -206,6 +210,13 @@ p {
 	.centerrow iframe {
 		margin: -7rem 0;
 	}
+}
+
+@media only screen and (min-width: 400px) {
+.container {
+    width: 75%;
+    padding: 0;
+}
 }
 
 
