--- a/seanmahoney/css/custom2.css
+++ b/seanmahoney/css/custom2.css
@@ -49,7 +49,7 @@ p {
 }
 
 .index {
-	background: url(../images/bg2_1800.jpg) fixed left center no-repeat;
+	background: url(../images/bg3_1800.jpg) fixed center no-repeat;
     background-size: cover;
     background-color: #151515;
     width: 100%;
