--- a/seanmahoney/css/custom.css
+++ b/seanmahoney/css/custom.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Merriweather:300,400');
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,600');
+
+body {
+	text-rendering: optimizeLegibility;
+	padding: 0;
+	margin: 0;
+}
+
+
 nav ul {
 	margin: 0 auto;
 	text-align: center;
@@ -17,7 +27,11 @@ nav li {
 }
 
 section {
-	margin-top: 10rem;
+	margin-top: 15rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	margin-bottom: .5rem;
 }
 
 h4 {
@@ -30,15 +44,36 @@ h5 {
 
 h6 {
 	font-weight: 800;
-	margin-bottom: 1rem;
+	margin: 1.5rem 0 .5rem; 
 }
 
 p {
 	text-align: justify;
+	font-family: 'Merriweather', serif;
+	font-weight: 300;
+}
+
+iframe {
+	margin-bottom: 1rem;
+}
+
+.index {
+	background: url(../images/bg.jpg) fixed center no-repeat;
+    background-size: cover;
+    background-color: #151515;
+    width: 100%;
+    height: 100vh;
 }
 
 
 .fixed {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+}
+
+.fixedtop {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -61,23 +96,41 @@ p {
 	z-index: 100;
 }
 
+.navbarhome {
+	border-top: none!important;
+	border-bottom: none!important;
+}
+
+.navbarhome .navlink {
+	color: #fff;
+}
+
 .navlink {
 	text-decoration: none;
 	color: #222; 
 }
 
-.maintitle {
-	margin-top: 28%;
+.center-text {
+	margin: 0;
+	padding: 0;
 	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%);
+}
+
+.maintitle {
 	letter-spacing: .1rem;
 	font-weight: 600;
+	font-size: 6rem;
+	color: #fff;
 }
 
 .subtitle {
-	font-size: 18px;
-	text-align: center;
+	font-size: 1.5rem;
 	letter-spacing: .1rem;
-	margin-bottom: 23rem;
+	color: #fff;
 }
 
 .work	{
@@ -89,7 +142,6 @@ p {
 	max-width: 640px;
 	margin: 0 auto 5rem;
 	text-align: justify;
-	border-bottom: 1px solid #bbb;
 }
 
 .centerrow iframe {
@@ -116,94 +168,29 @@ p {
 	text-align: center;
 	margin: 2rem auto;
 	padding: 2rem 10rem;
-	background-color: #eee;
+	background: url(../images/bg.jpg) fixed center no-repeat;
 	text-decoration: none;
+	color: #fff;
 }
 
-@media only screen and (max-width: 1200px) {
-	.subtitle {
-		margin-bottom: 26rem;
-	}
-
+a.sociallink:hover {
+	color: #000;
 }
 
-@media only screen and (max-width: 1050px) {
-	.subtitle {
-		margin-bottom: 28rem;
-	}
-
+a.sociallink {
+	padding: 2rem;
 }
 
-@media only screen and (max-width: 900px) {
-	.maintitle {
-		margin-top: 32%;
-	}
+.bio {
+	margin-top: 2rem;
 }
 
-@media only screen and (max-width: 750px) {
-	.maintitle {
-		margin-top: 38%;
-	}
-
-	.centerrow iframe {
-		margin: -.5rem 0;
-	}
+@media only screen and (min-width: 400px) {
+.container {
+    width: 75%;
+    padding: 0;
 }
-
-@media only screen and (max-width: 700px) {
-
-	.centerrow iframe {
-		margin: -2rem 0;
-	}
-}
-
-@media only screen and (max-width: 650px) {
-
-	.centerrow iframe {
-		margin: -3rem 0;
-	}
 }
 
 
-@media only screen and (max-width: 600px) {
-	.maintitle {
-		margin-top: 45%;
-	}
-
-	.centerrow iframe {
-		margin: -4rem 0;
-	}
-}
-
-
-@media only screen and (max-width: 520px) {
-	.maintitle {
-		margin-top: 52%;
-	}
-	.centerrow iframe {
-		margin: -5rem 0;
-	}
-}
-
-@media only screen and (max-width: 450px) {
-	.maintitle {
-		margin-top: 60%;
-	}
-
-	.centerrow iframe {
-		margin: -7rem 0;
-	}
-}
-
-@media only screen and (min-height: 750px) {
-	.maintitle {
-		margin-top: 50%;
-	}
-}
-
-@media only screen and (min-height: 800px) {
-	.maintitle {
-		margin-top: 85%;
-	}
-}
 
